# fontaine

./: CMakeLists.txt  README.md
cmake/modules/: FindFreetype.cmake
documentation/: COPYRIGHT  DEBIAN_UBUNTU_INSTALL.txt  GPL-2.0-LICENSE  LICENSE  NOTES_ON_CODING
documentation/html/: index.html
documentation/html/css/: main.css
doxygen/: CMakeLists.txt  Doxyfile.in
imageMasters/: showicons.html
imageMasters/css/: graphics.css
imageMasters/message_catalogs/: fr.mc  th.mc  zh_hans.mc
po/: CMakeLists.txt  Makefile  fontaine.pot  fr.po  th.po  zh_CN.po  zh_TW.po
src/: BasicLatinStringUtilities.cpp  BasicLatinStringUtilities.h  CLP.cpp  CLP.h  CMakeLists.txt  Debug.cpp  Debug.h  Encoding.cpp  Encoding.h  Exception.cpp  Exception.h  FXHTMLR.cpp  FXHTMLR.h  FontFace.cpp  FontFace.h  FontFamily.h  FontFile.h  FontLibrary.cpp  FontLibrary.h  JSONR.cpp  JSONR.h  LicenseData.h  MLR.cpp  MLR.h  ManualMakefile  Message.cpp  Message.h  OrthographyResults.cpp  OrthographyResults.h  ScriptCodes.h  TEXTR.cpp  TEXTR.h  Utf8String.cpp  Utf8String.h  Warning.cpp  Warning.h  XHTMLR.cpp  XHTMLR.h  XMLR.cpp  XMLR.h  (+2 more)
src/licenses/: Aladdin.h  Apache.h  ArphicPublic.h  BitstreamVera.h  CC-BY-SA.h  CC-BY.h  CC-ZERO.h  Freeware.h  GPL.h  GPLWithFontException.h  GUST.h  IPA.h  LGPL.h  MIT.h  MPLUS.h  Magenta.h  OFL.h  PublicDomain.h  STIX.h  UnknownLicense.h  Utopia.h  XFree86.h  licenses.h  template.h
src/orthographies/: Afrikaans.h  AsianCyrillic.h  Astronomy.h  Bengali.h  Braille.h  Cirth.h  Coptic.h  Currencies.h  CurrenciesOld.h  Emoticons.h  EskaleutCyrillic.h  EskaleutLatin.h  Esperanto.h  Farsi.h  Food.h  Gujarati.h  Hangul.h  HebrewCantillation.h  HebrewNiqqud.h  IPA.h  Jamo.h  Joyo.h  Kana.h  Klingon.h  Kokuji.h  LatinConstructs.h  MUFI_3_0.h  MathematicalNumerals.h  MathematicalOperators.h  Medical.h  Nko.h  PanAfricanLatin.h  Polynesian.h  Religion.h  SlavicCyrillic.h  Thai.h  Weather.h  orthographies.h  orthography  template.h  (+1 more)
src/tests/: testMLR.cpp  testUtil.cpp
